--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "private": true,
   "dependencies": {
     "expo": "^25.0.0",
+    "firebase": "^4.12.0",
     "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-navigation": "^1.5.8",
+    "react-redux": "^5.0.7",
+    "react-thunk": "^1.0.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "relative-date": "^1.1.3"
   }
 }
